--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -1,8 +1,8 @@
 - id: prev_page
-  translation: "Prev"
+  translation: "Zpět"
 
 - id: next_page
-  translation: "Next"
+  translation: "Další"
 
 - id: read_time
   translation:
